<resources>
    <string name="app_name">finalProject</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="TxtUser">Usuario</string>
    <string name="TxtPassword">Contraseña</string>
    <string name="btnLogin">Ingresar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sp_defense">SP Defense</string>
    <string name="defense">Defense</string>
    <string name="attack">Attack</string>
    <string name="speed">Speed</string>
    <string name="sp_attack">SP Attack</string>
    <string name="hp">HP</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="stats">Stats</string>
    <string name="pokemon_image">Pokemon image</string>
    <string name="evolution_chain">Evolution Chain</string>
    <string name="evolution_image">evolution image</string>
    <string name="arrow_right">➔</string>
    <string name="TxtName">Nombre</string>
    <string name="TxtCorreo">Correo</string>
    <string name="all">All</string>
    <string name="recent">Recent</string>
    <string name="favorites">Favorites</string>
    <string name="empty">Sin resultados</string>
</resources>