<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingBottom="8dp"
    android:textAlignment="center"
    tools:context=".fragments.PokemonDetailsFragment">

    <TextView
        android:id="@+id/pokemonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="Pokemon"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/pokemonImage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginBottom="22dp"
        android:contentDescription="@string/pokemon_image"
        app:srcCompat="@drawable/pokemon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/wrapPokemonDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        app:cardBackgroundColor="#F3ECEC"
        app:cardCornerRadius="8dp"
        app:contentPadding="16dp">

        <TextView
            android:id="@+id/pokemonDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/wrapType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="22dp"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:id="@+id/type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:text="Grass" />

        <com.google.android.material.chip.Chip
            android:id="@+id/type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:text="Water" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrapStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp">

        <TextView
            android:id="@+id/textSPDefense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp_defense"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSPAtack" />

        <TextView
            android:id="@+id/textDefense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAtack" />

        <TextView
            android:id="@+id/textAtack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHP" />

        <TextView
            android:id="@+id/textSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWeight" />

        <TextView
            android:id="@+id/textSPAtack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp_attack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSpeed" />

        <TextView
            android:id="@+id/textHP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHeight" />

        <TextView
            android:id="@+id/textHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/evolutionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/evolution_chain"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrapEvolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.finalProject.views.PokemonEvolution
            android:id="@+id/evolution_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/evolution_arrow_1"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </com.example.finalProject.views.PokemonEvolution>

        <TextView
            android:id="@+id/evolution_arrow_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow_right"
            android:textColor="@color/red"
            app:layout_constraintBottom_toTopOf="@+id/evolution_1"
            app:layout_constraintEnd_toStartOf="@+id/evolution_2"
            app:layout_constraintStart_toEndOf="@+id/evolution_1"
            app:layout_constraintTop_toBottomOf="@+id/evolution_1" />

        <com.example.finalProject.views.PokemonEvolution
            android:id="@+id/evolution_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/evolution_arrow_2"
            app:layout_constraintStart_toEndOf="@+id/evolution_arrow_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </com.example.finalProject.views.PokemonEvolution>

        <TextView
            android:id="@+id/evolution_arrow_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/arrow_right"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/evolution_3"
            app:layout_constraintStart_toEndOf="@+id/evolution_2"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.finalProject.views.PokemonEvolution
            android:id="@+id/evolution_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/evolution_arrow_2"
            app:layout_constraintTop_toTopOf="parent"></com.example.finalProject.views.PokemonEvolution>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>